# zenline_pitch

./: .gitignore  README.md  pyproject.toml
data/: download.py  sample.parquet
docs/: index.html  style.css
output/: run_log.json  step1_normalized.parquet  step2_ontology.json  step3_relationships.json  step4_gap_report.json  step4_gap_report.md  step5_consistency.json  step5_consistency.md  step5_transcripts.jsonl  step6_audit_trail.md  step6_vendor_diff.json  step6_vendor_diff.md
src/substitutes_agent/: __init__.py  cli.py  llm.py  models.py  pipeline.py  step1_ingest.py  step2_ontology.py  step3_classify.py  step4_report.py  step5_consistency.py  step6_audit.py  vastra_taxonomy.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_pipeline_e2e.py  test_step1_ingest.py  test_step2_ontology.py  test_step3_classify.py  test_step4_report.py  test_step5_consistency.py  test_step6_audit.py
tests/fixtures/: ingest_fixture.csv  ingest_fixture.parquet
