[project]
name = "substitutes-agent"
version = "0.1.0"
description = "Agentic workflow demo: mapping substitute face creams on Open Beauty Facts data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aryan Jhaveri" }]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "pydantic>=2.6",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
substitutes-agent = "substitutes_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/substitutes_agent"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["src/substitutes_agent"]

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/substitutes_agent"]
omit = ["src/substitutes_agent/__init__.py"]
